# EunicaApp

./: .replit  app.py  chat_socket.py  config  main.py  models.py  playwright.config.py  pyproject.toml  pytest.ini  replit.nix  routes.py  socket_events.py
docs/: Makefile  conf.py  index.rst  requirements.txt
logs/: app.log.1
static/css/: custom.css  main.css
static/js/: chat.js  sw.js  websocket.js
templates/: base.html  chat.html  login.html  profile.html  register.html
templates/includes/: header.html
test-artifacts/: pytest_report.html  test_report.html  test_report.json
tests/: conftest.py  test_auth.py  test_messaging.py  test_runner.py  test_search.py  test_ui.py
utils/: debug.py
