[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-socketio>=5.4.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "werkzeug",
    "sqlalchemy",
    "playwright>=1.48.0",
    "pytest-playwright>=0.5.2",
    "pytest-asyncio",
    "pytest",
    "pytest-html",
    "flask-limiter>=3.8.0",
    "flask-caching>=2.3.0",
    "flask-compress>=1.17",
    "sentry-sdk>=2.17.0",
]
